k8s/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-lake-ui
  namespace: new-lake
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: new-lake-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: new-lake-ui
    spec:
      containers:
      - name: new-lake-ui
        image: vertwave/new-lake-ui:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Never
      # imagePullSecrets:
      # - name: regcred   

---
apiVersion: v1
kind: Service
metadata:
  name: new-lake-ui-service
  namespace: new-lake
spec:
  selector:
    app: new-lake-ui
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http-unsecured
      port: 80
      targetPort: 80
